tests/api/reference/negative/03-signed-underflow.asm
const value: i8 = -129
